add new recipe empty

--- a/recipes/croque-madame.html
+++ b/recipes/croque-madame.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Croque Madame</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/croque-madame.html">Croque Madame</a>
+    <h1>Croque Madame</h1>
 </body>
 </html>
