--- a/recipes/spicy-sausage-balls.html
+++ b/recipes/spicy-sausage-balls.html
@@ -10,7 +10,7 @@
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7850898.jpg&q=60&c=sc&poi=auto&orient=true&h=512" style="width: 100%">
 
     <h2>Description</h2>
-        <p></p>
+        <p>These sausage balls are as good as Bisquick® sausage balls, but without the carbs and gluten. They are also keto friendly! Eat them fresh out of the oven or refrigerate or freeze for later use.</p>
 
     <h2>Ingredients</h2>
         <ul>
