--- a/recipes/croque-madame.html
+++ b/recipes/croque-madame.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Croque Madame</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8934841.jpg&q=60&c=sc&poi=auto&orient=true&h=512">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8934841.jpg&q=60&c=sc&poi=auto&orient=true&h=512" style="width: 512px">
 
     <h2>Description</h2>
         <p>A classic croque madame makes the perfect French-inspired brunch or lunch dish. Once you try this, it will be hard to have "just" a ham and cheese sandwich again. Don't cheat and use Swiss cheese, this deserves the real thing! Using Gruyère cheese will make all the difference.</p>
