--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/croque-madame.html">Croque Madame</a></li>
+        <div><li><a href="recipes/croque-madame.html">Croque Madame</a></li></div>
         <li><a href="recipes/spicy-sausage-balls.html">Spicy Sauasge Balls</a></li>
         <li><a href="recipes/cranberry-turkey-pinwheels.html">Cranberry Turkey Pinwheels</a></li>
     </ul>
