styled index.html with box model

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <div><li><a href="recipes/croque-madame.html">Croque Madame</a></li></div>
+        <li><a href="recipes/croque-madame.html">Croque Madame</a></li>
         <li><a href="recipes/spicy-sausage-balls.html">Spicy Sauasge Balls</a></li>
         <li><a href="recipes/cranberry-turkey-pinwheels.html">Cranberry Turkey Pinwheels</a></li>
     </ul>
